--- a/static/views/partials/header-events.ejs
+++ b/static/views/partials/header-events.ejs
@@ -52,8 +52,8 @@
   </div>
   
   <noindex>
-    <% if (studio) { -%>
-      <div class="search-prompt" id="search-prompt" data-res=<%= studio %>>
+    <% if (markerEncoded) { -%>
+      <div class="search-prompt" id="search-prompt" data-res=<%= markerEncoded %>>
         <button>В этой части карты ничего не нашел</button>
       </div>
     <% } else { -%>
