--- a/static/views/partials/header-studios.ejs
+++ b/static/views/partials/header-studios.ejs
@@ -26,8 +26,8 @@
     </a>
   </header>
   <noindex>
-    <% if (studio) { -%>
-      <div class="search-prompt" id="search-prompt" data-res=<%= studio %>>
+    <% if (markerEncoded) { -%>
+      <div class="search-prompt" id="search-prompt" data-res=<%= markerEncoded %>>
         <button>В этой части карты ничего не нашел</button>
       </div>
     <% } else { -%>
