--- a/static/views/studios.ejs
+++ b/static/views/studios.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     
-    <%- include('./partials/seotitle', title); -%>
+    <%- include('./partials/seotitle-main', page); -%>
     <link rel="icon" href="https://dancemap.online/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
@@ -54,7 +54,7 @@
   
   <body>
  
-  <%- include('./partials/header-studios', studio); -%>
+  <%- include('./partials/header-studios', marker); -%>
 
 
   <div id="map-box"></div>
