--- a/static/css/main.css
+++ b/static/css/main.css
@@ -224,11 +224,13 @@ input::-webkit-input-placeholder {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  opacity: 0.85;
+  opacity: 1;
   box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column; 
 }
 
-.sidenav a{
+.sidenav a {
   padding: 8px 8px 8px 10px;
   text-decoration: none;
   font-size: 18px;
@@ -245,16 +247,65 @@ input::-webkit-input-placeholder {
 
 
 .sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 0px;
   font-size: 36px;
-  margin-left: 50px;
+  margin-left: auto;
   color: #F20505;
 }
 
 .sidenav .closebtn:hover {
   color: #D91A3D;
+}
+
+.sidenav #nav-back:before{
+  content: "";
+  display: inline-block;
+  background: url(../images/chevron-left-solid.svg) no-repeat center left;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  opacity: 1;
+  -webkit-filter: invert(20%); /* Safari/Chrome */
+  filter: invert(20%);
+}
+
+.sidenav #nav-add:before{
+  content: "";
+  display: inline-block;
+  background: url(../images/plus-solid.svg) no-repeat center left;
+  vertical-align: middle;
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+  opacity: 1;
+  -webkit-filter: invert(20%); /* Safari/Chrome */
+  filter: invert(20%);
+}
+
+.sidenav #nav-studios:before {
+  content: "";
+  display: inline-block;
+  background: url(../images/location-arrow-solid.svg) no-repeat center left;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  opacity: 1;
+  -webkit-filter: invert(20%); /* Safari/Chrome */
+  filter: invert(20%);
+}
+
+.sidenav #nav-events:before {
+  content: "";
+  display: inline-block;
+  background: url(../images/fire-solid.svg) no-repeat center left;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  opacity: 1;
+  -webkit-filter: invert(20%); /* Safari/Chrome */
+  filter: invert(20%);
 }
 
 .burger-menu {
@@ -664,7 +715,7 @@ input::-webkit-input-placeholder {
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
   z-index: 7000;
 
 }
@@ -769,7 +820,7 @@ input::-webkit-input-placeholder {
   color: #484848;
 }
 @media only screen and (max-width: 480px) {
-  .modal-main .modal-content {width:80vw;}
+  .modal-main .modal-content {width:85vw;}
 }
 @media only screen and (min-width: 480px) {
   .modal-main .modal-content {width:75vw;}
@@ -777,7 +828,7 @@ input::-webkit-input-placeholder {
 @media only screen and (min-width: 600px) {
   .modal-main .modal-content {width:70vw;}
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (min-width: 700px) {
   .modal-main .modal-content {width:65vw;}
 }
 @media only screen and (min-width: 900px) {
