--- a/static/views/partials/header-events.ejs
+++ b/static/views/partials/header-events.ejs
@@ -29,8 +29,9 @@
     <div class="filter-types">
       <select>
         <option value="0">Опены/Вечеринки</option>
-        <option value="0">Мастерклассы</option>
+        <option value="0">Мастер-классы</option>
         <option value="0">Турниры</option>
+        <option value="0">Фестивали</option>
         <option value="0">Онлайн уроки</option>
       </select>
     </div>
