--- a/static/views/partials/modal-main.ejs
+++ b/static/views/partials/modal-main.ejs
@@ -7,10 +7,10 @@
       <h1>Танцевальные события и студии на онлайн карте </h1>
     </div>
     <div class="modal-body">
-      <a href="/studios" class="btn blue-bg" id="btn-studios">Студии танцев</a>
+      <a href="/studios" class="btn blue-bg" id="btn-studios" title="Студии и школы социальных танцев">Студии и школы танцев</a>
       <h2 class="dark-grey">Хастл, WCS, Бачата, Зук</h2>
-      <a href="/events" class="btn red-bg" id="btn-events">Танцевальные события</a>
-      <h2 class="darkgrey-color">Open airs, конкурсы, вечеринки</h2>
+      <a href="/events" class="btn red-bg" id="btn-events" title="Танцевальные события">Танцевальные события</a>
+      <h2 class="darkgrey-color">Open airs, турниры, мастер классы</h2>
     </div>
     <div class="modal-footer"> 
     </div>
