--- a/static/views/partials/seotitle-main.ejs
+++ b/static/views/partials/seotitle-main.ejs
@@ -1,8 +1,8 @@
 <% if (page) { %>
 
   <% if (page === 'events') { %>
-    <title>Опен эйры, конкурсы, вечеринки по социальным танцам: хастл, бачата, зук, сальса, WCS на онлайн карте Dancemap.online </title>
-    <meta name="Description" content="Опен эйры, турниры, вечеринки по социальным танцам: хастл, бачата, зук, сальса, WCS на онлайн карте Dancemap.online">
+    <title>Опен эйры, вечеринки, конкурсы, мастер классы, фестивали по социальным танцам: хастл, бачата, зук, сальса, WCS на онлайн карте Dancemap.online </title>
+    <meta name="Description" content="Опен эйры, вечеринки, турниры, мастер классы, фестивали по социальным танцам: хастл, бачата, зук, сальса, WCS на онлайн карте Dancemap.online">
   <% } %>
 
   <% if (page === 'studios') { %>
