--- a/static/views/index.ejs
+++ b/static/views/index.ejs
@@ -18,8 +18,9 @@
     <link href='https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css' rel='stylesheet' />
     <link href='https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css' rel='stylesheet' />
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-    <!-- Dancemap-->
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <!-- Dancemap-->
     <script  src="/js/mobile.js"></script>
     <link href='/css/main.css' rel='stylesheet' />
   
