--- a/static/views/studios.ejs
+++ b/static/views/studios.ejs
@@ -18,8 +18,10 @@
     <link href='https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css' rel='stylesheet' />
     <link href='https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css' rel='stylesheet' />
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-    <!-- Dancemap-->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/locale/ru.js"></script>
+    <!-- Dancemap-->
     <script  src="/js/mobile.js"></script>
     <link href='/css/main.css' rel='stylesheet' />
   
@@ -64,15 +66,26 @@
   <script  src="/js/socket.js"></script>
   <script  src="/js/mapcontrol.js"></script>
   <script>
+  dayjs.locale('ru');
   const settings = {
     event: false,
     datepicker: document.querySelector('input[type="date"]'),
     up: document.getElementById('date-right'),
     down: document.getElementById('date-left')
   }
+
+  const searchSettings = {
+    type: 'studio',
+    category: 'all',
+    radius: 5000,
+    queryType: 'geoWithin'
+  }
+
+  this.dancemap.mapcontrol.searchSetup(searchSettings);
+  this.dancemap.nav.navSetup(settings);
   this.dancemap.mapcontrol.openByURL();
   this.dancemap.socket.getClusters();
-  this.dancemap.nav.navSetup(settings);
+  
 
   </script>
 
