ld json fix typo

--- a/static/views/partials/schema_collection.ejs
+++ b/static/views/partials/schema_collection.ejs
@@ -95,3 +95,18 @@
 
    }"
 }
+
+
+             /*"eventSchedule": [{
+        "@type": "Schedule",
+        "repeatFrequency": "P1M",
+        "byDay": [
+          "http://schema.org/Monday",
+          "http://schema.org/Tuesday",
+          "http://schema.org/Wednesday",
+          "http://schema.org/Thursday",
+          "http://schema.org/Friday"
+        ],
+        "startTime": "18:00",
+        "endTime": "22:00"
+      }],*/
