--- a/static/views/partials/header-events.ejs
+++ b/static/views/partials/header-events.ejs
@@ -28,11 +28,11 @@
     </div>
     <div class="filter-types">
       <select>
-        <option value="0">Опены/Вечеринки</option>
-        <option value="0">Мастер-классы</option>
-        <option value="0">Турниры</option>
-        <option value="0">Фестивали</option>
-        <option value="0">Онлайн уроки</option>
+        <option value="party">Опены/Вечеринки</option>
+        <option value="masterclass">Мастер-классы</option>
+        <option value="сompetition">Турниры</option>
+        <option value="fest">Фестивали</option>
+        <option value="online">Онлайн уроки</option>
       </select>
     </div>
     <div class="filter-date__nav">
