--- a/static/views/studios.ejs
+++ b/static/views/studios.ejs
@@ -71,7 +71,8 @@
     event: false,
     datepicker: document.querySelector('input[type="date"]'),
     up: document.getElementById('date-right'),
-    down: document.getElementById('date-left')
+    down: document.getElementById('date-left'),
+    search: document.querySelector('input[type="search"]')
   }
 
   const searchSettings = {
