--- a/static/views/events.ejs
+++ b/static/views/events.ejs
@@ -72,7 +72,8 @@
         event: true,
         datepicker: document.querySelector('input[type="date"]'),
         up: document.getElementById('date-right'),
-        down: document.getElementById('date-left')
+        down: document.getElementById('date-left'),
+        search: document.querySelector('input[type="search"]')
       }
       const searchSettings = {
         type: 'event',
