--- a/static/views/events.ejs
+++ b/static/views/events.ejs
@@ -73,7 +73,9 @@
         datepicker: document.querySelector('input[type="date"]'),
         up: document.getElementById('date-right'),
         down: document.getElementById('date-left'),
-        search: document.querySelector('input[type="search"]')
+        search: document.querySelector('input[type="search"]'),
+        category: document.getElementById('filter-category'),
+        type: document.getElementById('filter-type')
       }
       const searchSettings = {
         type: 'event',
