--- a/static/views/partials/header-events.ejs
+++ b/static/views/partials/header-events.ejs
@@ -16,7 +16,7 @@
   
   <div class='container-filters'>
     <div class="filter-dance">
-      <select class="form-control" id="class-selector">
+      <select class="form-control" id="filter-category">
         <option value="all">Все события</option>
         <option value="hustle">Хастл</option>
         <option value="zouk">Зук</option>
@@ -27,7 +27,8 @@
 
     </div>
     <div class="filter-types">
-      <select>
+      <select id="filter-type">
+        <option value="all">Все направления</option>
         <option value="party">Опены/Вечеринки</option>
         <option value="masterclass">Мастер-классы</option>
         <option value="сompetition">Турниры</option>
