--- a/static/views/partials/header-studios.ejs
+++ b/static/views/partials/header-studios.ejs
@@ -5,7 +5,7 @@
       <span class="burger-menu" onclick="dancemap.nav.openNav()">&#9776;</span>
     </div> 
     <div class="nav container-select__pseudo">
-      <select class="form-control" id="class-selector">
+      <select class="form-control" id="filter-category">
         <option value="all">Все студии</option>
         <option value="hustle">Хастл</option>
         <option value="zouk">Зук</option>
