--- a/static/views/studios.ejs
+++ b/static/views/studios.ejs
@@ -72,7 +72,8 @@
     datepicker: document.querySelector('input[type="date"]'),
     up: document.getElementById('date-right'),
     down: document.getElementById('date-left'),
-    search: document.querySelector('input[type="search"]')
+    search: document.querySelector('input[type="search"]'),
+    category: document.getElementById('filter-category')
   }
 
   const searchSettings = {
