event type filter'

--- a/static/views/events.ejs
+++ b/static/views/events.ejs
@@ -79,6 +79,7 @@
       }
       const searchSettings = {
         type: 'event',
+        eventType: 'all',
         category: 'all',
         radius: 5000,
         queryType: 'geoWithin'
