--- a/static/views/partials/header-events.ejs
+++ b/static/views/partials/header-events.ejs
@@ -28,10 +28,10 @@
     </div>
     <div class="filter-types">
       <select id="filter-type">
-        <option value="all">Все направления</option>
+        <option value="all" selected="selected">Все направления</option>
         <option value="party">Опены/Вечеринки</option>
         <option value="masterclass">Мастер-классы</option>
-        <option value="сompetition">Турниры</option>
+        <option value="competition">Турниры</option>
         <option value="fest">Фестивали</option>
         <option value="online">Онлайн уроки</option>
       </select>
