side content server rendering

--- a/static/views/events.ejs
+++ b/static/views/events.ejs
@@ -57,7 +57,7 @@
   <body>
  
     <%- include('./partials/header-events', marker); -%>
-
+    <%- include('./partials/sidecontent', marker, dayjs); -%>
 
     <div id="map-box"></div>
   
