--- a/static/views/partials/header-events.ejs
+++ b/static/views/partials/header-events.ejs
@@ -3,7 +3,7 @@
 <div class="container-header__nav"> 
   <header class="">
     <div class="nav">   
-      <span class="burger-menu" onclick="dancemap.nav.openNav()">&#9776;</span>
+      <span class="burger-menu" onclick="dancemap.nav.openSidenav()">&#9776;</span>
     </div>
     <div class="nav container-input__pseudo">
       <input type="search" placeholder="Название события">
