--- a/static/views/partials/sidenav.ejs
+++ b/static/views/partials/sidenav.ejs
@@ -1,6 +1,6 @@
 <% if (nav === 'event') { %>
   <div id="sidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeSidenav()">&times;</a>
     <a class="side-nav__link" id="nav-back" href="/">назад на главную</a>
     <a class="side-nav__link" id="nav-studios" href="/studios">искать студии</a>
     <a class="side-nav__link" id="nav-add" href="/add.html">добавить событие</a>
@@ -10,7 +10,7 @@
 	
 <% if (nav === 'studio') { %>
   <div id="sidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeSidenav()">&times;</a>
     <a class="side-nav__link" id="nav-back" href="/">назад на главную</a>
     <a class="side-nav__link" id="nav-events" href="/events">искать события</a>
     <a class="side-nav__link" id="nav-add" href="/add.html">добавить студию</a>
