--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,11 @@ h1, h2, h3, h4, h5, h6 {
   margin: 5px 0;
   font-weight: 500;
 }
+
+.marker-title h1 {
+  font-weight: bold;
+}
+
 h1, h2 { 
   font-size: 16px;
 }
@@ -353,6 +358,70 @@ input::-webkit-input-placeholder {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+/*SIDE MARKER CONTENT*/
+.sidecontent > div {
+  padding: 10px 15px;
+}
+
+
+.sidecontent .closebtn {
+  font-size: 36px;
+  margin-right: auto;
+  color: #F20505;
+  line-height: 1.1em;
+  text-decoration: none;
+  padding: 10px 15px;
+}
+
+.sidecontent .closebtn:hover {
+  color: #D91A3D;
+}
+
+.sidecontent .icon-vk {
+  display: inline-block;
+  background: url(../images/vk.svg);
+  background-repeat: no-repeat;
+  height: 30px;
+  width: 30px;
+}
+
+.sidecontent .icon-location {
+  display: inline-block;
+  background: url(../images/location.svg);
+  background-repeat: no-repeat;
+  height: 20px;
+  width: 20px;
+  opacity: 0.6;
+}
+
+@media only screen and (max-width: 600px) {
+  .sidecontent {
+    display: none;
+  }
+  
+}
+
+
+@media only screen and (min-width: 600px) {
+  .sidecontent {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 9999;
+    top: 4px;
+    right: 0;
+    background-color: #FFF;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 0px;
+    opacity: 1;
+    box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column; 
+    width: 400px;
+  }
+}
 /*MAP*/
 
 #map-box {
@@ -383,9 +452,11 @@ input::-webkit-input-placeholder {
 }
 
 .container-info__address {
-  display: inline-flex;
-  justify-content: center;
   margin-top: 5px;
+}
+
+.container-info__address #address{
+  padding-top: 5px;
 }
 .container-info__url {
   
@@ -450,10 +521,17 @@ input::-webkit-input-placeholder {
   width: 30px;
   opacity: 1;
   stroke: black;
-
 }
+
 .marker-title {
   font-weight:bold;
+}
+.marker-content > div {
+  padding-bottom: 10px;
+}
+.marker-content .subtitle {
+  display: block;
+  font-weight: bold;
 }
 
 /* Show popups on hover so hide the close link
