--- a/static/views/partials/header-studios.ejs
+++ b/static/views/partials/header-studios.ejs
@@ -2,7 +2,7 @@
 <div class="container-header__nav"> 
   <header class="">
     <div class="nav">   
-      <span class="burger-menu" onclick="dancemap.nav.openNav()">&#9776;</span>
+      <span class="burger-menu" onclick="dancemap.nav.openSidenav()">&#9776;</span>
     </div> 
     <div class="nav container-select__pseudo">
       <select class="form-control" id="filter-category">
