--- a/static/views/studios.ejs
+++ b/static/views/studios.ejs
@@ -57,6 +57,7 @@
   <body>
  
   <%- include('./partials/header-studios', marker); -%>
+  <%- include('./partials/sidecontent', marker, dayjs); -%>
 
 
   <div id="map-box"></div>
